--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	var ref = cordova.InAppBrowser.open('http://apache.org', '_blank', 'location=yes');
 	</script>
 	<div class="divTableRow">
-		<div class="divTableCella"><img src="https://images-na.ssl-images-amazon.com/images/I/51CeYGN%2Bc0L._SX306_BO1,204,203,200_.jpg" alt="" id="img" /> <br><br>  <h6>https://images-na.ssl-images-amazon.com/images/I/51CeYGN%2Bc0L._SX306_BO1,204,203,200_.jpg</h6></div>
+		<div class="divTableCella"><scrpit>var ref = cordova.InAppBrowser.open('https://images-na.ssl-images-amazon.com/images/I/51CeYGN%2Bc0L._SX306_BO1,204,203,200_.jpg"', '_blank', 'location=yes');</script> <br><br>  <h6>https://images-na.ssl-images-amazon.com/images/I/51CeYGN%2Bc0L._SX306_BO1,204,203,200_.jpg</h6></div>
 			<div class="divTableCellb">
 		<h4>Neil deGrasse Tyson - Astrophysics for People in a Hurry</h4>
 		What is the nature of space and time? How do we fit within the universe? How does the universe fit within us? There&rsquo;s no better guide through these mind-expanding questions than acclaimed astrophysicist and best-selling author Neil deGrasse Tyson.</div>
