--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width", initial-scale=1.0">
         <title>Books</title>
-		<script type="text/javascript" src="cordova.js"></script>
+		<script type="text/javascript"></script>
 		<link rel="stylesheet" type="text/css" href="index.css">
 		
 		
@@ -12,9 +12,7 @@
     </head>
     <body>
 	<div>
-	<script> 
-	var ref = cordova.InAppBrowser.open('http://apache.org', '_blank', 'location=yes');
-	</script>
+
 	<div class="divTableRow">
 		<div class="divTableCella"><img src="https://images-na.ssl-images-amazon.com/images/I/51CeYGN%2Bc0L._SX306_BO1,204,203,200_.jpg" alt="" id="img" /> <br><br>  <h6>https://images-na.ssl-images-amazon.com/images/I/51CeYGN%2Bc0L._SX306_BO1,204,203,200_.jpg</h6></div>
 			<div class="divTableCellb">
