--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width", initial-scale=1.0">
         <title>Books</title>
-		<script language="JavaScript" type="text/javascript"/>	
+		<script type="text/javascript" src="cordova.js"></script>
 		<link rel="stylesheet" type="text/css" href="index.css">
 		
 		
